style: fix hero section clipping issues

--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,8 @@ a:hover {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
+  display: inline-block;
+  padding: 0.1em 0;
 }
 
 /* Layout Setup */
